Fix alignment and responsive issues with home nav

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,5 +16,5 @@
 
 .footer-social-links {
     float: right;
-    margin-right: 7%;
+    /* margin-right: 7%; */
 }
